--- a/internal/handler/static/styles.css
+++ b/internal/handler/static/styles.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #333;
-    color: #fff;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding: 10px;
-	margin: 0;
+  background-color: #333;
+  color: #fff;
+  font-family: 'Source Code Pro', monospace;
+  text-align: center;
+  padding: 10px;
+  margin: 0;
 }
 
 .ascii-art {
@@ -14,38 +14,38 @@ body {
 }
 
 .container {
-	width: 100%;
-	max-width: 800px;
-	margin: 0 auto;
-	padding: 10px;
-	box-sizing: border-box;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .table-container {
   margin-top: 20px;
-	overflow-x: auto;
+  overflow-x: auto;
 }
 
 table {
-    width: 100%;
-    max-width: 100%;
-    border-collapse: collapse;
-    background-color: #444;
-    color: #fff;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 100%;
+  border-collapse: collapse;
+  background-color: #444;
+  color: #fff;
+  margin: 0 auto;
 }
 
 table th, table td {
-    padding: 10px;
-    text-align: left;
+  padding: 10px;
+  text-align: left;
 }
 
 table th {
-    background-color: #222;
+  background-color: #222;
 }
 
 table td {
-    border-top: 1px solid #666;
+  border-top: 1px solid #666;
 }
 
 .delete-button {
@@ -65,12 +65,12 @@ tr:hover .update-button {
 }
 
 a {
-    color: #4af;
-    text-decoration: none;
+  color: #4af;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 input[type="text"], input[type="url"] {
@@ -102,7 +102,7 @@ button:hover {
 }
 
 @media screen and (max-width: 768px) {
-	.table-container {
-		margin-top: 10px;
-	}
+  .table-container {
+    margin-top: 10px;
+  }
 }
